--- a/src/components/Pages/Navigation/Navigation.scss
+++ b/src/components/Pages/Navigation/Navigation.scss
@@ -79,6 +79,9 @@
     color: var(--primary) !important;
     font-size: 2rem;
   }
+  @include respond-to('small') {
+    font-size: 1.5rem;
+  }
 
   &:hover {
     color: var(--bg) !important;
