--- a/src/components/Pages/Projects/Projects.scss
+++ b/src/components/Pages/Projects/Projects.scss
@@ -1,6 +1,7 @@
 @import '../../../_mixins.scss';
 
 #projects {
+  background: #f2f2f2;
   padding-bottom: 200px;
 }
 
